--- a/src/components/Galeria.astro
+++ b/src/components/Galeria.astro
@@ -24,67 +24,38 @@ import Topic from './Topic.astro';
       </p>
     </div>
 
-    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-4">
+    <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
       <div>
-        <a href="/fotos/foto1.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto1.png" alt="Descripción de la imagen 1" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        <a href="/fotos/foto1.jpeg" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto1.jpeg" alt="Descripción de la imagen 1" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
         </a>
       </div>
       <div>
-        <a href="/fotos/foto2.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto2.png" alt="Descripción de la imagen 2" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        <a href="/fotos/foto2.jpeg" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto2.jpeg" alt="Descripción de la imagen 2" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
         </a>
       </div>
       <div>
-        <a href="/fotos/foto3.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto3.png" alt="Descripción de la imagen 3" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        <a href="/fotos/foto3.jpeg" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto3.jpeg" alt="Descripción de la imagen 3" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
         </a>
       </div>
       <div>
-        <a href="/fotos/foto4.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto4.png" alt="Descripción de la imagen 4" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        <a href="/fotos/foto4.jpeg" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto4.jpeg" alt="Descripción de la imagen 4" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
         </a>
       </div>
       <div>
-        <a href="/fotos/foto5.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto5.png" alt="Descripción de la imagen 5" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        <a href="/fotos/foto5.jpeg" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto5.jpeg" alt="Descripción de la imagen 5" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
         </a>
       </div>
       <div>
-        <a href="/fotos/foto6.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto6.png" alt="Descripción de la imagen 6" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        <a href="/fotos/foto6.jpeg" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto6.jpeg" alt="Descripción de la imagen 6" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
         </a>
       </div>
-      <div>
-        <a href="/fotos/foto7.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto7.png" alt="Descripción de la imagen 7" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
-        </a>
-      </div>
-      <div>
-        <a href="/fotos/foto8.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto8.png" alt="Descripción de la imagen 8" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
-        </a>
-      </div>
-      <div>
-        <a href="/fotos/foto9.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto9.png" alt="Descripción de la imagen 9" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
-        </a>
-      </div>
-      <div>
-        <a href="/fotos/foto10.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto10.png" alt="Descripción de la imagen 10" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
-        </a>
-      </div>
-      <div>
-        <a href="/fotos/foto11.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto11.png" alt="Descripción de la imagen 11" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
-        </a>
-      </div>
-      <div>
-        <a href="/fotos/foto12.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
-          <img src="/fotos/foto12.png" alt="Descripción de la imagen 12" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
-        </a>
-      </div>
+     
     </div>
   </div>
 </div>
