--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -12,7 +12,7 @@ import Descubre from '../components/Descubre.astro';
 <Layout title="Positivus">
 	<main class="space-y-20">
 		
-		<Team/>
+		<Team jsonPath="./Data/team.json"/>
 
 	</main>
 </Layout>
