--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -63,39 +63,39 @@ import noticiasData from '../components/Data/noticias.json';
     <h2 class="text-4xl font-semibold mb-4">Enlaces de interés</h2>
     <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 w-full max-w-screen-xl mx-auto">
       <div class="p-4 transition duration-300 transform hover:scale-105 hover:shadow-lg rounded-lg overflow-hidden">
-        <a href="#">
+        <a href="https://www.perueduca.pe/">
           <img src="./logos/peru_educa.png" class="h-16 w-full object-contain" loading="lazy" alt="client logo" />
         </a>
       </div>
       <div class="p-4 transition duration-300 transform hover:scale-105 hover:shadow-lg rounded-lg overflow-hidden">
-        <a href="#">
+        <a href="https://www.gob.pe/sineace/">
           <img src="./logos/2.jpeg" class="h-16 w-full object-contain" loading="lazy" alt="client logo" />
         </a>
       </div>
       <div class="p-4 transition duration-300 transform hover:scale-105 hover:shadow-lg rounded-lg overflow-hidden">
-        <a href="#">
+        <a href="https://anterior.ugelilo.edu.pe/">
           <img src="./logos/3.jpeg" class="h-16 w-full object-contain" loading="lazy" alt="client logo" />
         </a>
       </div>
       <div class="p-4 transition duration-300 transform hover:scale-105 hover:shadow-lg rounded-lg overflow-hidden">
-        <a href="#">
+        <a href="https://m.facebook.com/ugel.mariscalnieto/">
           <img src="./logos/4.jpeg" class="h-16 w-full object-contain" loading="lazy" alt="client logo" />
         </a>
       </div>
     </div>
     <div class="grid grid-cols-2 sm:grid-cols-3 gap-6 w-full max-w-screen-xl mx-auto">
       <div class="p-4 transition duration-300 transform hover:scale-105 hover:shadow-lg rounded-lg overflow-hidden">
-        <a href="#">
+        <a href="https://m.facebook.com/p/Ugel-San-Ignacio-de-Loyola-EIB-100069749523726/">
           <img src="./logos/5.jpeg" class="h-16 w-full object-contain" loading="lazy" alt="client logo" />
         </a>
       </div>
       <div class="p-4 transition duration-300 transform hover:scale-105 hover:shadow-lg rounded-lg overflow-hidden">
-        <a href="#">
+        <a href="https://escale.minedu.gob.pe/">
           <img src="./logos/6.jpeg" class="h-16 w-full object-contain" loading="lazy" alt="client logo" />
         </a>
       </div>
       <div class="p-4 transition duration-300 transform hover:scale-105 hover:shadow-lg rounded-lg overflow-hidden">
-        <a href="#">
+        <a href="https://sia.pedagogicos.pe/">
           <img src="./logos/7.jpeg" class="h-16 w-full object-contain" loading="lazy" alt="client logo" />
         </a>
       </div>
